--- a/Controls/TextToggleButton.xaml
+++ b/Controls/TextToggleButton.xaml
@@ -103,7 +103,11 @@
         </Style>
     </UserControl.Resources>
     <Grid>
-        <ToggleButton x:Name="DisplayModeSwitch" Style="{DynamicResource TextToggleButtonStyle}" BorderThickness="3,3,3,3" Width="200" Height="100" Checked="DisplayModeSwitch_Checked" Unchecked="DisplayModeSwitch_Unchecked">
+        <ToggleButton x:Name="DisplayModeSwitch" Style="{DynamicResource TextToggleButtonStyle}" 
+                      BorderThickness="3,3,3,3" 
+                      Checked="DisplayModeSwitch_Checked" 
+                      Unchecked="DisplayModeSwitch_Unchecked"
+                      IsChecked="{Binding DisplayMode}">
             <Grid Height="90" Width="182">
                 <DockPanel Name="Holder" Margin="10,10,10,7" VerticalAlignment="Center">
                     <ToggleButton Style="{DynamicResource InnerButtonStyle}" x:Name="InnerButton" Height="45" Width="45" HorizontalAlignment="Left" BorderThickness="0,0,0,0" VerticalAlignment="Center" Background="White">
