--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,6 +8,7 @@
         xmlns:Pages="clr-namespace:RandomChooser.Pages"
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="1200" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/Assets/Images/dice.png"
+        AllowsTransparency="False"
         Background="LightGray">
 
     <Grid>
