--- a/Pages/Settings.xaml
+++ b/Pages/Settings.xaml
@@ -19,16 +19,16 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Settings" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="80">
-            <Label.BitmapEffect>
+        <TextBlock Grid.Row="0" Text="Settings" HorizontalAlignment="Center" FontSize="80" TextDecorations="Underline" LineStackingStrategy="BlockLineHeight">
+            <TextBlock.BitmapEffect>
                 <DropShadowBitmapEffect Color="Black"
                                         Direction="320"
                                         ShadowDepth="3"
-                                        Opacity=".9"
+                                        Opacity=".3"
                                         Softness="10"
                                         />
-            </Label.BitmapEffect>
-        </Label>
+            </TextBlock.BitmapEffect>
+        </TextBlock>
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
             <customControls:Textfield x:Name="MinValue" TextFieldText="{Binding MinRange , Mode=TwoWay}" TopText="Min" Grid.Row="2" HorizontalAlignment="Left" Width="800" Margin="10 10 10 10"/>
             <customControls:Textfield x:Name="MaxValue" TextFieldText="{Binding MaxRange , Mode=TwoWay}" TopText="Max" Grid.Row="3" HorizontalAlignment="Right" Width="800" Margin="10 10 10 10"/>
@@ -37,29 +37,25 @@
             <customControls:SunMoonButton Theme="{Binding Theme}" Width="200" Height="100" Margin="20"/>
             <customControls:TextToggleButton State="{Binding DisplayMode}" Width="200" Height="100" Margin="20"/>
         </StackPanel>
-        <customControls:RoundedButton Background="Black" 
+        <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">
+        </StackPanel>
+        <customControls:RoundedButton Grid.Row = "4"
+                                      Background="Black" 
                                       x:Name="ConfirmBtn"
                                       Width="200" 
                                       Height="60" 
                                       VerticalAlignment="Center" 
                                       HorizontalAlignment="Center" 
                                       Corner="15" 
-                                      Content="Done"
+                                      Content="Save"
                                       Foreground="White"
                                       OnHoverBackground="White"
                                       OnHoverTextColor="Black"
                                       FontSize="20"
                                       FontFamily="Calibri"
                                       FontWeight="Bold"
-                                      Grid.Row="3"
                                       Margin="20" Click="RoundedButton_Click"
                                       />
-        <TextBlock Grid.Row="4"
-                   x:Name="Current_State"
-                   FontSize="40"
-                   FontFamily="Calibri"
-                   TextAlignment="Center"
-                   Margin="10"/>
     </Grid>
 
 </Page>
