--- a/Pages/RandomWordPage.xaml
+++ b/Pages/RandomWordPage.xaml
@@ -1,21 +1,21 @@
-﻿<Page x:Class="RandomChooser.Pages.MainPage"
+﻿<Page x:Class="RandomChooser.Pages.RandomWordPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:RandomChooser.Pages" 
-      xmlns:customControls="clr-namespace:RandomChooser.Controls"
+      xmlns:local="clr-namespace:RandomChooser.Pages" xmlns:customControls="clr-namespace:RandomChooser.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="800" d:DesignWidth="1200"
-      Title="MainPage" 
-      Background="LightGray">
+      Title="Random Word" Background="LightGray">
+
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70*"/>
             <RowDefinition Height="30*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Image x:Name="Dice" Source="/Assets/Images/dice.png" Grid.Row="0" VerticalAlignment="Bottom" Width="250">
+            <Image x:Name="Dice" Source="/Assets/Images/dictionary.png" Grid.Row="0" VerticalAlignment="Bottom" Width="250" Margin="20">
                 <Image.Effect>
                     <DropShadowEffect 
                                         Color="Black"
@@ -26,7 +26,7 @@
                 </Image.Effect>
             </Image>
             <Label
-            Content="Random Number" 
+            Content="Random Word" 
             x:Name="AppName" 
             Grid.Row="1" 
             FontSize="45"
@@ -39,17 +39,17 @@
         </StackPanel>
         <StackPanel Grid.Row="1">
             <customControls:RoundedButton Background="Black" Margin="20" Width="450" Height="60" VerticalAlignment="Center" HorizontalAlignment="Center" Corner="15" 
-                                      Content="Start Random Number"
+                                      Content="Start Random Word"
                                       Foreground="White"
                                       OnHoverBackground="White"
                                       OnHoverTextColor="Black"
                                       FontSize="30"
                                       FontFamily="Calibri"
                                       Grid.Row="1" 
-                                      Click="RoundedButton_Click" FontWeight="Bold"
+                                      FontWeight="Bold"
                                       />
             <customControls:RoundedButton Background="Black" Width="450" Height="60" VerticalAlignment="Center" HorizontalAlignment="Center" Corner="15" 
-                                      Content="Switch to Random Word"
+                                      Content="Switch to Random Number"
                                       Foreground="White"
                                       OnHoverBackground="White"
                                       OnHoverTextColor="Black"
@@ -68,7 +68,7 @@
                                       FontFamily="/Assets/Fonts/#Font Awesome 6 Free Solid"
                                       Grid.Row="1" 
                                       FontWeight="Bold"
-                                      Margin="10" Click="SettingsBtn_Click"
+                                      Margin="10"
                                       />
 
         <customControls:RoundedButton Background="Black" x:Name="EditBtn" Width="80" Height="80" VerticalAlignment="Bottom" HorizontalAlignment="Left" Corner="20" 
@@ -85,4 +85,7 @@
 
 
     </Grid>
+
+
+
 </Page>
