--- a/Pages/Settings.xaml
+++ b/Pages/Settings.xaml
@@ -8,8 +8,56 @@
       d:DesignHeight="800" d:DesignWidth="1200"
       Background="LightGray"
       Title="Settings">
-
-
+    <Page.Resources>
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+        <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+        <Style x:Key="ColorCircle" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+            <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true" CornerRadius="30,30,30,30" Width="45" Height="45">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsDefaulted" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
+    
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -34,10 +82,43 @@
             <customControls:Textfield x:Name="MaxValue" TextFieldText="{Binding MaxRange , Mode=TwoWay}" TopText="Max" Grid.Row="3" HorizontalAlignment="Right" Width="800" Margin="10 10 10 10"/>
         </StackPanel>
         <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <customControls:SunMoonButton Theme="{Binding Theme}" Width="200" Height="100" Margin="20"/>
-            <customControls:TextToggleButton State="{Binding DisplayMode}" Width="200" Height="100" Margin="20"/>
+            <customControls:SunMoonButton Theme="{Binding Theme}" Margin="20" Width="200" Height="100"/>
+            <TextBlock Text="|" 
+                       HorizontalAlignment="Center" 
+                       FontSize="10" 
+                       TextAlignment="Center"
+                       Margin="10"
+                       Foreground="Gray"
+                       >
+                <TextBlock.RenderTransform>
+                    <ScaleTransform ScaleY="8"/>
+                </TextBlock.RenderTransform>
+            </TextBlock>
+            
+            <customControls:TextToggleButton x:Name="PresentationMode" State="{Binding DisplayMode}" Margin="20" Width="200" Height="100"/>
         </StackPanel>
-        <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">
+
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
+                <Button Style="{DynamicResource ColorCircle}" x:Name="___ColorIndicator_" Background="{Binding TextColorBrush , Mode=TwoWay}" Click="___ColorIndicator__Click"/>
+                <Label Grid.Column="1" Content="Text Color" FontSize="25" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Margin="10 0 0 0"/>
+            </StackPanel>
+
+            <TextBlock Text="|" 
+                       HorizontalAlignment="Center" 
+                       FontSize="8" 
+                       TextAlignment="Center"
+                       Margin="12 0 12 0"
+                       Foreground="Gray"
+                       >
+                <TextBlock.RenderTransform>
+                    <ScaleTransform ScaleY="4"/>
+                </TextBlock.RenderTransform>
+            </TextBlock>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
+                <Button Style="{DynamicResource ColorCircle}" x:Name="PageColorExtended" Background="{Binding PageColorBrush , Mode=TwoWay}" Click="PageColorIndicator_Click"/>
+                <Label Grid.Column="1" Content="Page Background" FontSize="25" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Margin="10 0 0 0"/>
+            </StackPanel>
         </StackPanel>
         <customControls:RoundedButton Grid.Row = "4"
                                       Background="Black" 
