--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -56,7 +56,7 @@
                                       FontSize="30"
                                       FontFamily="Calibri"
                                       Grid.Row="1" 
-                                      FontWeight="Bold"
+                                      FontWeight="Bold" Click="RoundedButton_Click_1"
                                       />
         </StackPanel>
         <customControls:RoundedButton Background="Black" x:Name="SettingsBtn" Width="80" Height="80" VerticalAlignment="Bottom" HorizontalAlignment="Right" Corner="20" 
