--- a/Pages/RandomWordPage.xaml
+++ b/Pages/RandomWordPage.xaml
@@ -56,7 +56,7 @@
                                       FontSize="30"
                                       FontFamily="Calibri"
                                       Grid.Row="1" 
-                                      FontWeight="Bold"
+                                      FontWeight="Bold" Click="RoundedButton_Click"
                                       />
         </StackPanel>
         <customControls:RoundedButton Background="Black" x:Name="SettingsBtn" Width="80" Height="80" VerticalAlignment="Bottom" HorizontalAlignment="Right" Corner="20" 
@@ -68,7 +68,7 @@
                                       FontFamily="/Assets/Fonts/#Font Awesome 6 Free Solid"
                                       Grid.Row="1" 
                                       FontWeight="Bold"
-                                      Margin="10"
+                                      Margin="10" Click="SettingsBtn_Click"
                                       />
 
         <customControls:RoundedButton Background="Black" x:Name="EditBtn" Width="80" Height="80" VerticalAlignment="Bottom" HorizontalAlignment="Left" Corner="20" 
